--- a/Quality Wine/templates/index.html
+++ b/Quality Wine/templates/index.html
@@ -29,6 +29,8 @@
   </div>
 ​
 <div class="row"></div>
+
+{% comment %}  {% endcomment %}
 ​
  <div class="container">
   <!-- <div class="login"> -->
